Fixed my own inconsistency with spacing of eggs and potions. oops.

--- a/styles/app/inventory.styl
+++ b/styles/app/inventory.styl
@@ -63,7 +63,7 @@
     display:inline-block
     vertical-align:top
     padding:.3em
-    width:7em
+    width:6em
     margin-top:1em
     p
       text-align:center
